# HYPE

./: README.md
backend/: .env  .gitignore  README.md  auth.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_bot.py
backend/services/: bank_parser.py  reconciler.py  telegram_bot.py
frontend/: .gitignore  README.md  lint_output.txt  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/bank-credits/: page.tsx
frontend/src/app/login/: actions.ts  page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ArcGauge.tsx  Sidebar.tsx  SummaryPanel.tsx  index.ts
frontend/src/components/common/: DataTable.tsx  EmptyState.tsx  FilterBar.tsx  LoadingState.tsx  Modal.tsx  StatusBadge.tsx  index.ts
frontend/src/components/landing/: CtaBanner.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  StatsBar.tsx  data.ts
frontend/src/components/layout/: PageHeader.tsx  index.ts
frontend/src/features/bank-credits/: page.tsx
frontend/src/features/campaigns/: page.tsx
frontend/src/features/dashboard/: page.tsx
frontend/src/features/orders/: page.tsx
frontend/src/features/settlements/: page.tsx
frontend/src/hooks/: useAuth.ts  useExport.ts
frontend/src/lib/: api.ts  exportUtils.ts
frontend/src/lib/auth/: actions.ts
frontend/src/lib/email/: confirm-signup.html
frontend/src/utils/supabase/: middleware.ts
supabase/: 001_schema.sql  002_auth_schema.sql
(+36 files in other folders)
